--- a/Osborn.styles.css
+++ b/Osborn.styles.css
@@ -140,7 +140,8 @@ footer .icon{
 
 
 /* ----- HANDLE PREFERS REDUCED MOTION FOR THE ICON ANIMATIONS ----- */
-/* --------------- BEGIN USER PREFERS REDUCED MOTION QUERY --------------- */
+@media (prefers-reduced-motion: reduce) {
+    /* --------------- BEGIN USER PREFERS REDUCED MOTION QUERY --------------- */
     @-webkit-keyframes icon-animation {
         0% { font-variation-settings: "TIME" 1; }
     }
@@ -148,6 +149,8 @@ footer .icon{
         0% { font-variation-settings: "TIME" 1; }
     }
 /* --------------- END USER PREFERS REDUCED MOTION QUERY --------------- */
+}
+
 
 
 
